--- a/Assets/Resources/Languages/2_EN-UK.xml
+++ b/Assets/Resources/Languages/2_EN-UK.xml
@@ -43,6 +43,6 @@
     <i k="UI.PauseMenu" v="Pause Menu"/>
     <i k="UI.Loading" v="Loading"/>
     <i k="UI.Loading.WithDots" v="Loading..."/>
-    <i k="UI.RevertToDefault" v="Revert to Defeault"/>
+    <i k="UI.RevertToDefault" v="Revert to Default"/>
     <i k="UI.GameTitle" v="(GAMETITLE)"/>
 </data>
