--- a/Assets/Resources/Languages/3_ZH-TW.xml
+++ b/Assets/Resources/Languages/3_ZH-TW.xml
@@ -18,12 +18,6 @@
     <i k="UI.Settings.Movement.InvertY" v="反轉 Y 軸"/>
     <i k="UI.Settings.Movement.Sensitivity" v="靈敏度"/>
     <i k="UI.Settings.Language" v="語言"/>
-    <i k="UI.Settings.Language.EN" v="English"/>
-    <i k="UI.Settings.Language.EN.US" v="English (US)"/>
-    <i k="UI.Settings.Language.EN.UK" v="English (UK)"/>
-    <i k="UI.Settings.Language.JP" v="日本語"/>
-    <i k="UI.Settings.Language.ZH.TW" v="繁體中文"/>
-    <i k="UI.Settings.Language.ZH.CN" v="简体中文"/>
     <i k="UI.Settings.Visuals.Graphics" v="畫面"/>
     <i k="UI.Settings.Visuals.Subtitles" v="字幕"/>
     <i k="UI.Settings.Visuals.FullscreenMode" v="全螢幕模式"/>
@@ -31,9 +25,12 @@
     <i k="UI.Settings.Visuals.Brightness" v="顯示亮度"/>
     <i k="UI.Settings.Audio.Volume" v="音量"/>
     <i k="UI.Settings.Controls" v="控制"/>
+    <i k="UI.Settings.Controls.Keyboard" v="鍵盤"/>
+    <i k="UI.Settings.Controls.Gamepad" v="控制器"/>
     <i k="UI.Settings.Controls.TiltUp" v="向上"/>
     <i k="UI.Settings.Controls.TiltDown" v="向下"/>
     <i k="UI.Settings.Controls.Vibration" v="震動"/>
+    <i k="UI.Settings.Controls.GamepadVibration" v="控制器震動"/>
     <i k="UI.PressAnyKey" v="按任何鍵"/>
     <i k="UI.Continue" v="繼續"/>
     <i k="UI.Resume" v="繼續"/>
