--- a/Assets/Resources/Languages/4_ZH-CN.xml
+++ b/Assets/Resources/Languages/4_ZH-CN.xml
@@ -9,16 +9,16 @@
     <i k="UI.On" v="开启"/>
     <i k="UI.Off" v="关闭"/>
     <i k="UI.Settings" v="设定"/>
-    <i k="UI.Settings.Graphics" v="画质"/>
-    <i k="UI.Settings.Graphics.Low" v="低"/>
-    <i k="UI.Settings.Graphics.Medium" v="中"/>
-    <i k="UI.Settings.Graphics.High" v="高"/>
-    <i k="UI.Settings.Graphics.Ultra" v="极高"/>
     <i k="UI.Settings.Movement.InvertX" v="反转 X 轴"/>
     <i k="UI.Settings.Movement.InvertY" v="反转 Y 轴"/>
     <i k="UI.Settings.Movement.Sensitivity" v="灵敏度"/>
     <i k="UI.Settings.Language" v="语言"/>
     <i k="UI.Settings.Visuals.Graphics" v="画面"/>
+    <i k="UI.Settings.Visuals.Quality" v="画质"/>
+    <i k="UI.Settings.Visuals.Quality.Low" v="低"/>
+    <i k="UI.Settings.Visuals.Quality.Medium" v="中"/>
+    <i k="UI.Settings.Visuals.Quality.High" v="高"/>
+    <i k="UI.Settings.Visuals.Quality.Ultra" v="极高"/>
     <i k="UI.Settings.Visuals.Subtitles" v="字幕"/>
     <i k="UI.Settings.Visuals.FullscreenMode" v="全屏模式"/>
     <i k="UI.Settings.Visuals.Resolution" v="解析度"/>
