--- a/Assets/Resources/Languages/1_EN.xml
+++ b/Assets/Resources/Languages/1_EN.xml
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="UTF - 8" standalone="yes"?>
+<?xml version="1.0" encoding="UTF-8" standalone="yes"?>
 <data>
     <i k="Key" v="EN"/>
     <i k="LanguageName" v="English"/>
