--- a/Assets/Resources/Languages/3_ZH-TW.xml
+++ b/Assets/Resources/Languages/3_ZH-TW.xml
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="UTF - 8" standalone="yes"?>
+<?xml version="1.0" encoding="UTF-8" standalone="yes"?>
 <data>
     <i k="Key" v="ZH-TW"/>
     <i k="LanguageName" v="繁體中文"/>
