--- a/Assets/Resources/Languages/4_ZH-CN.xml
+++ b/Assets/Resources/Languages/4_ZH-CN.xml
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="UTF - 8" standalone="yes"?>
+<?xml version="1.0" encoding="UTF-8" standalone="yes"?>
 <data>
     <i k="Key" v="ZH-CN"/>
     <i k="LanguageName" v="简体中文"/>
