--- a/Assets/Resources/Languages/3_ZH-TW.xml
+++ b/Assets/Resources/Languages/3_ZH-TW.xml
@@ -31,6 +31,8 @@
     <i k="UI.Settings.Controls.TiltDown" v="向下"/>
     <i k="UI.Settings.Controls.Vibration" v="震動"/>
     <i k="UI.Settings.Controls.GamepadVibration" v="控制器震動"/>
+    <i k="UI.Settings.Controls.Binding.WaitingForInput" v="正在等待輸入…"/>
+    <i k="UI.Settings.Controls.Binding.NewKeyPrefix" v="按下的按鍵將綁定："/>
     <i k="UI.PressAnyKey" v="按任何鍵"/>
     <i k="UI.Continue" v="繼續"/>
     <i k="UI.Resume" v="繼續"/>
@@ -42,4 +44,5 @@
     <i k="UI.Loading.WithDots" v="讀取中…"/>
     <i k="UI.RevertToDefault" v="恢復為預設值"/>
     <i k="UI.GameTitle" v="(GAMETITLE)"/>
+    <i k="UI.Credits" v="開發人員"/>
 </data>
