--- a/Assets/Resources/Languages/4_ZH-CN.xml
+++ b/Assets/Resources/Languages/4_ZH-CN.xml
@@ -31,6 +31,8 @@
     <i k="UI.Settings.Controls.TiltDown" v="向下"/>
     <i k="UI.Settings.Controls.Vibration" v="震动"/>
     <i k="UI.Settings.Controls.GamepadVibration" v="控制器震动"/>
+    <i k="UI.Settings.Controls.Binding.WaitingForInput" v="正在等待输入… "/>
+    <i k="UI.Settings.Controls.Binding.NewKeyPrefix" v="按下的按键将绑定："/>
     <i k="UI.PressAnyKey" v="按任意键"/>
     <i k="UI.Continue" v="继续"/>
     <i k="UI.Resume" v="继续"/>
@@ -42,4 +44,5 @@
     <i k="UI.Loading.WithDots" v="加载中..."/>
     <i k="UI.RevertToDefault" v="恢复为默认值"/>
     <i k="UI.GameTitle" v="(GAMETITLE)"/>
+    <i k="UI.Credits" v="开发人员"/>
 </data>
