--- a/Assets/Resources/Languages/2_FR.xml
+++ b/Assets/Resources/Languages/2_FR.xml
@@ -45,4 +45,6 @@
     <i k="UI.RevertToDefault" v="Réglages par défaut"/>
     <i k="UI.GameTitle" v="(GAMETITLE)"/>
     <i k="UI.Credits" v="Crédits"/>
+    <i k="QA.Questionnaire" v="Questionnaire"/>
+    <i k="QA.ReportBug" v="Signaler un bug"/>
 </data>
