--- a/Assets/Resources/Languages/6_ZH-CN.xml
+++ b/Assets/Resources/Languages/6_ZH-CN.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8" standalone="yes"?>
 <data>
     <i k="Key" v="ZH-CN"/>
-    <i k="LanguageName" v="简体中文"/>
+    <i k="LanguageName" v="简体字"/>
     <i k="UI.Yes" v="是"/>
     <i k="UI.No" v="否"/>
     <i k="UI.Confirm" v="确认"/>
@@ -47,4 +47,51 @@
     <i k="UI.Credits" v="开发人员"/>
     <i k="QA.Questionnaire" v="填写问卷"/>
     <i k="QA.ReportBug" v="回报问题"/>
+    <i k="Credits.Credits" v="开发人员"/>
+    <i k="Credits.CreatedBy" v="游戏制作"/>
+    <i k="Credits.ProducedBy" v="制作人"/>
+    <i k="Credits.GameDesign" v="游戏设计"/>
+    <i k="Credits.Story" v="故事"/>
+    <i k="Credits.Script" v="剧本"/>
+    <i k="Credits.Trailer" v="预告"/>
+    <i k="Credits.LevelDesign" v="关卡设计"/>
+    <i k="Credits.Art" v="美术"/>
+    <i k="Credits.Art.LeadArt" v="主美术"/>
+    <i k="Credits.Art.ConceptArt" v="概念美术"/>
+    <i k="Credits.Art.2DArt" v="2D 美术"/>
+    <i k="Credits.Art.3DArt" v="3D 美术"/>
+    <i k="Credits.Art.EnvironmentArt" v="环境美术"/>
+    <i k="Credits.Art.CharacterArt" v="角色美术"/>
+    <i k="Credits.Art.Animation" v="动画"/>
+    <i k="Credits.Art.PostEffects" v="特效"/>
+    <i k="Credits.Art.TechnicalArt" v="技术美术"/>
+    <i k="Credits.Programming" v="程式"/>
+    <i k="Credits.Programming.LeadProgramming" v="主程式"/>
+    <i k="Credits.Audio" v="声音"/>
+    <i k="Credits.Audio.AudioDirecting" v="音效总监"/>
+    <i k="Credits.Audio.SoundDesign" v="音效设计"/>
+    <i k="Credits.Audio.AudioProgramming" v="音效程式"/>
+    <i k="Credits.Audio.Music" v="音乐"/>
+    <i k="Credits.Audio.Composing" v="作曲"/>
+    <i k="Credits.Testers" v="测试"/>
+    <i k="Credits.Testers.InternalTesters" v="内部测试"/>
+    <i k="Credits.Testers.ExternalTesters" v="白纸测试"/>
+    <i k="Credits.ExternalResources" v="外部资源"/>
+    <i k="Credits.ExternalResources.Fonts" v="字体"/>
+    <i k="Credits.ExternalResources.Textures" v="材质"/>
+    <i k="Credits.ExternalResources.Models" v="模型"/>
+    <i k="Credits.ExternalResources.SoundEffects" v="音效"/>
+    <i k="Credits.ExternalResources.Music" v="音乐"/>
+    <i k="Credits.ExternalResources.Audio" v="声音"/>
+    <i k="Credits.Localization" v="翻译"/>
+    <i k="Credits.Localization.English" v="英文"/>
+    <i k="Credits.Localizatioin.French" v="法文"/>
+    <i k="Credits.Localization.German" v="德文"/>
+    <i k="Credits.Localization.Japanese" v="日文"/>
+    <i k="Credits.Localization.ZH-TW" v="繁体字"/>
+    <i k="Credits.Localization.ZH-CN" v="简体字"/>
+    <i k="Credits.Localization.Korean" v="韩文"/>
+    <i k="Credits.SpecialThanks" v="特别感谢"/>
+    <i k="Credits.Disclaimer" v="本作品目前为 demo 版本。本作品于 2023 年 12 月 12 日开始开发。"/>
+    <i k="Credits.ThankYouForPlaying" v="感谢您的游玩。"/>
 </data>
