--- a/Assets/Resources/Languages/7_KO.xml
+++ b/Assets/Resources/Languages/7_KO.xml
@@ -47,4 +47,51 @@
     <i k="UI.Credits" v="제작진"/>
     <i k="QA.Questionnaire" v="설문지"/>
     <i k="QA.ReportBug" v="버그 신고하기"/>
+    <i k="Credits.Credits" v="제작진"/>
+    <i k="Credits.CreatedBy" v="게임 제작자"/>
+    <i k="Credits.ProducedBy" v="프로듀서"/>
+    <i k="Credits.GameDesign" v="게임 디자인"/>
+    <i k="Credits.Story" v="스토리"/>
+    <i k="Credits.Script" v="글 내용"/>
+    <i k="Credits.Trailer" v="예고편"/>
+    <i k="Credits.LevelDesign" v="레벨 디자인"/>
+    <i k="Credits.Art" v="아티스트"/>
+    <i k="Credits.Art.LeadArt" v="리드 아티스트"/>
+    <i k="Credits.Art.ConceptArt" v="컨셉 아티스트"/>
+    <i k="Credits.Art.2DArt" v="2D 아티스트"/>
+    <i k="Credits.Art.3DArt" v="3D 아티스트"/>
+    <i k="Credits.Art.EnvironmentArt" v="배경 아티스트"/>
+    <i k="Credits.Art.CharacterArt" v="캐릭터 아티스트"/>
+    <i k="Credits.Art.Animation" v="애니메이터"/>
+    <i k="Credits.Art.PostEffects" v="특수 효과"/>
+    <i k="Credits.Art.TechnicalArt" v="테크니컬 아티스트"/>
+    <i k="Credits.Programming" v="프로그래머"/>
+    <i k="Credits.Programming.LeadProgramming" v="리드 프로그래머"/>
+    <i k="Credits.Audio" v="음향"/>
+    <i k="Credits.Audio.AudioDirecting" v="음향 감독"/>
+    <i k="Credits.Audio.SoundDesign" v="사운드 디자이너"/>
+    <i k="Credits.Audio.AudioProgramming" v="오디오 프로그래머"/>
+    <i k="Credits.Audio.Music" v="음악"/>
+    <i k="Credits.Audio.Composing" v="작곡"/>
+    <i k="Credits.Testers" v="테스터"/>
+    <i k="Credits.Testers.InternalTesters" v="내부 테스터"/>
+    <i k="Credits.Testers.ExternalTesters" v="외부 테스터"/>
+    <i k="Credits.ExternalResources" v="외부 리소스"/>
+    <i k="Credits.ExternalResources.Fonts" v="글꼴"/>
+    <i k="Credits.ExternalResources.Textures" v="텍스처"/>
+    <i k="Credits.ExternalResources.Models" v="3D 모델"/>
+    <i k="Credits.ExternalResources.SoundEffects" v="사운드 디자이너"/>
+    <i k="Credits.ExternalResources.Music" v="음악"/>
+    <i k="Credits.ExternalResources.Audio" v="음향"/>
+    <i k="Credits.Localization" v="현지화"/>
+    <i k="Credits.Localization.English" v="영어"/>
+    <i k="Credits.Localizatioin.French" v="프랑스어"/>
+    <i k="Credits.Localization.German" v="독일어"/>
+    <i k="Credits.Localization.Japanese" v="일본어"/>
+    <i k="Credits.Localization.ZH-TW" v="중국어 (정체자)"/>
+    <i k="Credits.Localization.ZH-CN" v="중국어 (간체자)"/>
+    <i k="Credits.Localization.Korean" v="한국어"/>
+    <i k="Credits.SpecialThanks" v="특별 감사"/>
+    <i k="Credits.Disclaimer" v="This game is currently a demo. Its development started from December 12, 2023."/>
+    <i k="Credits.ThankYouForPlaying" v="Thank you for playing."/>
 </data>
