--- a/Assets/Resources/Languages/6_ZH-CN.xml
+++ b/Assets/Resources/Languages/6_ZH-CN.xml
@@ -92,6 +92,6 @@
     <i k="Credits.Localization.ZH-CN" v="简体字"/>
     <i k="Credits.Localization.Korean" v="韩文"/>
     <i k="Credits.SpecialThanks" v="特别感谢"/>
-    <i k="Credits.Disclaimer" v="本作品目前为 demo 版本。本作品于 2023 年 12 月 12 日开始开发。"/>
+    <i k="Credits.Disclaimer" v="本游戏目前为 demo 版本。本作品于 2023 年 12 月 12 日开始开发。"/>
     <i k="Credits.ThankYouForPlaying" v="感谢您的游玩。"/>
 </data>
