--- a/Assets/Resources/Languages/1_EN.xml
+++ b/Assets/Resources/Languages/1_EN.xml
@@ -27,10 +27,12 @@
     <i k="UI.Settings.Controls" v="Controls"/>
     <i k="UI.Settings.Controls.Keyboard" v="Keyboard"/>
     <i k="UI.Settings.Controls.Gamepad" v="Gamepad"/>
+    <i k="UI.Settings.Controls.Controller" v="Controller"/>
     <i k="UI.Settings.Controls.TiltUp" v="Tilt Up"/>
     <i k="UI.Settings.Controls.TiltDown" v="Tilt Down"/>
     <i k="UI.Settings.Controls.Vibration" v="Vibration"/>
     <i k="UI.Settings.Controls.GamepadVibration" v="Gamepad Vibration"/>
+    <i k="UI.Settings.Controls.ControllerVibration" v="Controller Vibration"/>
     <i k="UI.Settings.Controls.Binding.WaitingForInput" v="Waiting for input..."/>
     <i k="UI.Settings.Controls.Binding.NewKeyPrefix" v="Input a new key for action:"/>
     <i k="UI.PressAnyKey" v="Press Any Key"/>
@@ -43,7 +45,7 @@
     <i k="UI.Loading" v="Loading"/>
     <i k="UI.Loading.WithDots" v="Loading..."/>
     <i k="UI.RevertToDefault" v="Revert to Default"/>
-    <i k="UI.GameTitle" v="(GAMETITLE)"/>
+    <i k="UI.GameTitle" v="DRIFTED"/>
     <i k="UI.Credits" v="Credits"/>
     <i k="QA.Questionnaire" v="Questionnaire"/>
     <i k="QA.ReportBug" v="Report Bug"/>
