--- a/Assets/Resources/Languages/6_ZH-CN.xml
+++ b/Assets/Resources/Languages/6_ZH-CN.xml
@@ -27,10 +27,12 @@
     <i k="UI.Settings.Controls" v="控制"/>
     <i k="UI.Settings.Controls.Keyboard" v="键盘"/>
     <i k="UI.Settings.Controls.Gamepad" v="控制器"/>
+    <i k="UI.Settings.Controls.Controller" v="控制器"/>
     <i k="UI.Settings.Controls.TiltUp" v="向上"/>
     <i k="UI.Settings.Controls.TiltDown" v="向下"/>
     <i k="UI.Settings.Controls.Vibration" v="震动"/>
     <i k="UI.Settings.Controls.GamepadVibration" v="控制器震动"/>
+    <i k="UI.Settings.Controls.ControllerVibration" v="控制器震动"/>
     <i k="UI.Settings.Controls.Binding.WaitingForInput" v="正在等待输入… "/>
     <i k="UI.Settings.Controls.Binding.NewKeyPrefix" v="按下的按键将绑定："/>
     <i k="UI.PressAnyKey" v="按任意键"/>
@@ -43,7 +45,7 @@
     <i k="UI.Loading" v="加载中"/>
     <i k="UI.Loading.WithDots" v="加载中..."/>
     <i k="UI.RevertToDefault" v="恢复为默认值"/>
-    <i k="UI.GameTitle" v="(GAMETITLE)"/>
+    <i k="UI.GameTitle" v="DRIFTED"/>
     <i k="UI.Credits" v="开发人员"/>
     <i k="QA.Questionnaire" v="填写问卷"/>
     <i k="QA.ReportBug" v="回报问题"/>
