--- a/Assets/Resources/Languages/7_KO.xml
+++ b/Assets/Resources/Languages/7_KO.xml
@@ -27,10 +27,12 @@
     <i k="UI.Settings.Controls" v="조작"/>
     <i k="UI.Settings.Controls.Keyboard" v="키보드"/>
     <i k="UI.Settings.Controls.Gamepad" v="게임패드"/>
+    <i k="UI.Settings.Controls.Controller" v="게임패드"/>
     <i k="UI.Settings.Controls.TiltUp" v="위로 기울이기"/>
     <i k="UI.Settings.Controls.TiltDown" v="아래로 기울이기"/>
     <i k="UI.Settings.Controls.Vibration" v="진동"/>
     <i k="UI.Settings.Controls.GamepadVibration" v="게임패드 진동"/>
+    <i k="UI.Settings.Controls.ControllerVibration" v="게임패드 진동"/>
     <i k="UI.Settings.Controls.Binding.WaitingForInput" v="입력 대기 중..."/>
     <i k="UI.Settings.Controls.Binding.NewKeyPrefix" v="동작에 대한 새로운 키 입력:"/>
     <i k="UI.PressAnyKey" v="아무 키나 누르세요"/>
@@ -43,7 +45,7 @@
     <i k="UI.Loading" v="불러오는 중..."/>
     <i k="UI.Loading.WithDots" v="불러오는 중"/>
     <i k="UI.RevertToDefault" v="기본값으로 되돌리기"/>
-    <i k="UI.GameTitle" v="(GAMETITLE)"/>
+    <i k="UI.GameTitle" v="DRIFTED"/>
     <i k="UI.Credits" v="제작진"/>
     <i k="QA.Questionnaire" v="설문지"/>
     <i k="QA.ReportBug" v="버그 신고하기"/>
