--- a/Assets/Resources/Languages/6_ZH-CN.xml
+++ b/Assets/Resources/Languages/6_ZH-CN.xml
@@ -49,6 +49,7 @@
     <i k="UI.Credits" v="开发人员"/>
     <i k="QA.Questionnaire" v="填写问卷"/>
     <i k="QA.ReportBug" v="回报问题"/>
+    <i k="QA.WishlistOnSteam" v="在 Steam 加入愿望清单"/>
     <i k="Credits.Credits" v="开发人员"/>
     <i k="Credits.CreatedBy" v="游戏制作"/>
     <i k="Credits.ProducedBy" v="制作人"/>
@@ -94,6 +95,10 @@
     <i k="Credits.Localization.ZH-CN" v="简体字"/>
     <i k="Credits.Localization.Korean" v="韩文"/>
     <i k="Credits.SpecialThanks" v="特别感谢"/>
-    <i k="Credits.Disclaimer" v="本游戏目前为 demo 版本。本作品于 2023 年 12 月 12 日开始开发。"/>
+    <i k="Credits.Disclaimer" v="本游戏目前为 demo 版本。本作品于 2023 年 11 月开始开发。"/>
+    <i k="Credits.DemoDisclaimer" v="本游戏目前为 demo 版本。"/>
+    <i k="Credits.DemoDisclaimer.Bug" v="游戏尚在开发中，如游玩过程中出现错误请见谅。"/>
     <i k="Credits.ThankYouForPlaying" v="感谢您的游玩。"/>
+    <i k="Credits.ThankYouForPlaying.Demo" v="感谢您游玩本 DEMO 作品。"/>
+    <i k="Credits.HeadphoneSuggested" v="推荐使用耳机以达到最佳体验。"/>
 </data>
