--- a/Assets/Resources/Languages/2_FR.xml
+++ b/Assets/Resources/Languages/2_FR.xml
@@ -49,6 +49,7 @@
     <i k="UI.Credits" v="Crédits"/>
     <i k="QA.Questionnaire" v="Questionnaire"/>
     <i k="QA.ReportBug" v="Signaler un bug"/>
+    <i k="QA.WishlistOnSteam" v="Wishlist on Steam"/>
     <i k="Credits.Credits" v="Crédits"/>
     <i k="Credits.CreatedBy" v="Créé par"/>
     <i k="Credits.ProducedBy" v="Produit par"/>
@@ -94,6 +95,10 @@
     <i k="Credits.Localization.ZH-CN" v="Mandarin (Sinogramme simplifié)"/>
     <i k="Credits.Localization.Korean" v="Coréen"/>
     <i k="Credits.SpecialThanks" v="Remerciements spéciaux"/>
-    <i k="Credits.Disclaimer" v="This game is currently a demo. Its development started from December 12, 2023."/>
+    <i k="Credits.Disclaimer" v="This game is currently a demo. Its development started from November 2023."/>
+    <i k="Credits.DemoDisclaimer" v="This game is currently a demo."/>
+    <i k="Credits.DemoDisclaimer.Bug" v="This is a work in progress, and it does not represent the quality of the final game."/>
     <i k="Credits.ThankYouForPlaying" v="Thank you for playing."/>
+    <i k="Credits.ThankYouForPlaying.Demo" v="This is the end of the demo."/>
+    <i k="Credits.HeadphoneSuggested" v="Use headphones for the best experience."/>
 </data>
