--- a/Assets/Resources/Languages/7_KO.xml
+++ b/Assets/Resources/Languages/7_KO.xml
@@ -49,6 +49,7 @@
     <i k="UI.Credits" v="제작진"/>
     <i k="QA.Questionnaire" v="설문지"/>
     <i k="QA.ReportBug" v="버그 신고하기"/>
+    <i k="QA.WishlistOnSteam" v="Wishlist on Steam"/>
     <i k="Credits.Credits" v="제작진"/>
     <i k="Credits.CreatedBy" v="게임 제작자"/>
     <i k="Credits.ProducedBy" v="프로듀서"/>
@@ -94,6 +95,10 @@
     <i k="Credits.Localization.ZH-CN" v="중국어 (간체자)"/>
     <i k="Credits.Localization.Korean" v="한국어"/>
     <i k="Credits.SpecialThanks" v="특별 감사"/>
-    <i k="Credits.Disclaimer" v="This game is currently a demo. Its development started from December 12, 2023."/>
+    <i k="Credits.Disclaimer" v="This game is currently a demo. Its development started from November 2023."/>
+    <i k="Credits.DemoDisclaimer" v="This game is currently a demo."/>
+    <i k="Credits.DemoDisclaimer.Bug" v="This is a work in progress, and it does not represent the quality of the final game."/>
     <i k="Credits.ThankYouForPlaying" v="Thank you for playing."/>
+    <i k="Credits.ThankYouForPlaying.Demo" v="Thank you for playing the demo."/>
+    <i k="Credits.HeadphoneSuggested" v="Use headphones for the best experience."/>
 </data>
