Chore: Updated Localization Table

--- a/Assets/Resources/Languages/5_ZH-TW.xml
+++ b/Assets/Resources/Languages/5_ZH-TW.xml
@@ -97,7 +97,7 @@
     <i k="Credits.SpecialThanks" v="特別感謝"/>
     <i k="Credits.Disclaimer" v="本遊戲目前為 DEMO 版本。本作品於 2023 年 11 月開始開發。"/>
     <i k="Credits.DemoDisclaimer" v="本遊戲目前為 DEMO 版本。"/>
-    <i k="Credits.DemoDisclaimer.Bug" v="遊戲尚在開發中，如遊玩過程中出現錯誤請見諒。"/>
+    <i k="Credits.DemoDisclaimer.Bug" v="遊戲尚在開發中，如遊玩過程出現錯誤請見諒。"/>
     <i k="Credits.ThankYouForPlaying" v="感謝您的遊玩。"/>
     <i k="Credits.ThankYouForPlaying.Demo" v="感謝您遊玩本 DEMO 作品。"/>
     <i k="Credits.HeadphoneSuggested" v="推薦使用耳機以達到最佳體驗。"/>
