--- a/Assets/Resources/Languages/6_ZH-CN.xml
+++ b/Assets/Resources/Languages/6_ZH-CN.xml
@@ -97,7 +97,7 @@
     <i k="Credits.SpecialThanks" v="特别感谢"/>
     <i k="Credits.Disclaimer" v="本游戏目前为 demo 版本。本作品于 2023 年 11 月开始开发。"/>
     <i k="Credits.DemoDisclaimer" v="本游戏目前为 demo 版本。"/>
-    <i k="Credits.DemoDisclaimer.Bug" v="游戏尚在开发中，如游玩过程中出现错误请见谅。"/>
+    <i k="Credits.DemoDisclaimer.Bug" v="游戏尚在开发中，如游玩过程出现错误请见谅。"/>
     <i k="Credits.ThankYouForPlaying" v="感谢您的游玩。"/>
     <i k="Credits.ThankYouForPlaying.Demo" v="感谢您游玩本 DEMO 作品。"/>
     <i k="Credits.HeadphoneSuggested" v="推荐使用耳机以达到最佳体验。"/>
